k8s/base/apps-metadata-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-metadata-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # springfox swagger-ui uses X-Forwarded-Prefix to find the
    # base url when behind a reverse proxy.
    # nginx-ingress-controller V0.24 has a simple alternative
    # but latest minikube 1.1.0 uses V0.23 (untested):
    # nginx.ingress.kubernetes.io/x-forwarded-prefix: "/apps-metadata"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/apps-metadata$ /apps-metadata/ permanent;
      proxy_set_header X-Forwarded-Prefix         /apps-metadata/;
    nginx.ingress.kubernetes.io/server-snippet: |
      merge_slashes off;
      client_header_buffer_size 64k;
      large_client_header_buffers 4 64k;
spec:
  rules:
  - http:
      paths:
      - path: /apps-metadata(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: apps-metadata-server
            port:
              number: 80
